--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -25,7 +25,7 @@ h1 {
     min-height: 100%;
     width: auto;
     height: auto; */
-    z-index: -100;
+    /* z-index: -100; */
     /* transform: translateX(-50%) translateY(-50%);
     transition: 1s opacity; */
 }
@@ -33,4 +33,21 @@ h1 {
 .home-top {
     
     margin-bottom: 90%;
+}
+
+#tagline {
+    color: rgba(131, 192, 176);
+    font-weight: bold;
+    animation: fade-in-tag ease-out 400ms;
+    text-align: start;
+}
+
+@keyframes fade-in-tag {
+    0% {
+        opacity: 0;
+        transform: translateX(-10vw);
+    }
+    100% {
+        opacity: 100;
+    }
 }
