--- a/src/pages/Product.css
+++ b/src/pages/Product.css
@@ -84,9 +84,9 @@
  
     /* z-index: -100; */
 
-    background-image: linear-gradient(120deg, rgba(34, 103, 55, 0.435),rgba(25, 198, 36, 0.468),rgba(90, 195, 144, 0.7),rgba(24, 86, 35, 0.796));
+    background-image: linear-gradient(135deg, rgba(131, 192, 176, 0.7),rgba(34, 103, 55, 0.435),rgba(25, 198, 36, 0.468),rgba(24, 86, 35, 0.796),rgba(131, 192, 176, 0.7));
     background-size: 400% 400%;
-    animation: gradient 10s ease infinite; 
+    animation: gradient 10s ease-in-out infinite; 
     /* top: 50%;
     left: 50%; */
        /* width: auto; */
@@ -121,7 +121,7 @@
 }
 
 .card-zoom:hover {
-    transform: scale(1.10);
+    transform: scale(1.075);
 }
 
 .btn-close-pos {
